Update Theme Color and Add New Cookie Modal

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-bs-theme="dark">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -301,7 +301,7 @@
             
     </section>
     <div class="header-gap"></div>
-    <section class="theme-space" style="background-color: #e8eaea;">
+    <section class="theme-space" style="background-color: #212529;">
         <div class="container">
             <div class="row">
                 <div class="col-lg-4">
@@ -605,7 +605,7 @@
             </div>
         </div>
     </section>
-    <section class="theme-space" style="background-color: #e8eaea;">
+    <section class="theme-space" style="background-color: #212529;">
         <div class="container">
             
             <div class="row justify-content-center">
@@ -631,13 +631,13 @@
             </div>
             <div class="py-5 my-2"></div>
             <div>
-                <h3 class="mb-5 h3 text-center fw-bold text-dark">Wie wir arbeiten</h3>
+                <h3 class="mb-5 h3 text-center fw-bold">Wie wir arbeiten</h3>
                 <ul class="list-unstyled d-flex flex-column flex-md-row align-items-center align-items-md-start pt-2">
                     <li class="content-card d-flex flex-column align-items-center">
                         <div class="content-icon">
                             <img class="object-fit-contain" src="assets/images/1-1.svg" alt="">
                         </div>
-                        <p class="text-center mb-0 fs-14 mt-3 text-dark">Analyse des Materials, des Briefings und des Zeitplans</p>
+                        <p class="text-center mb-0 fs-14 mt-3">Analyse des Materials, des Briefings und des Zeitplans</p>
                     </li>
                     <li class="arrow-card">
                         <img class="w-100 object-fit-contain" src="assets/images/arrow.svg" alt="">
@@ -646,7 +646,7 @@
                         <div class="content-icon">
                             <img class="object-fit-contain" src="assets/images/2.svg" alt="">
                         </div>
-                        <p class="text-center mb-0 fs-14 mt-3 text-dark">3D-Modellierung und Freigabe der Kamerapositionierung</p>
+                        <p class="text-center mb-0 fs-14 mt-3">3D-Modellierung und Freigabe der Kamerapositionierung</p>
                     </li>
                     <li class="arrow-card">
                         <img class="w-100 object-fit-contain" src="assets/images/arrow.svg" alt="">
@@ -655,7 +655,7 @@
                         <div class="content-icon">
                             <img class="object-fit-contain" src="assets/images/3.svg" alt="">
                         </div>
-                        <p class="text-center mb-0 fs-14 mt-3 text-dark">Previews in fotorealistischer Qualität</p>
+                        <p class="text-center mb-0 fs-14 mt-3">Previews in fotorealistischer Qualität</p>
                     </li>
                     <li class="arrow-card">
                         <img class="w-100 object-fit-contain" src="assets/images/arrow.svg" alt="">
@@ -664,7 +664,7 @@
                         <div class="content-icon">
                             <img class="object-fit-contain" src="assets/images/4.svg" alt="">
                         </div>
-                        <p class="text-center mb-0 fs-14 mt-3 text-dark">Finale Visualisierung</p>
+                        <p class="text-center mb-0 fs-14 mt-3">Finale Visualisierung</p>
                     </li>
                 </ul>
             </div>
@@ -679,7 +679,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6">
-                    <h3 class="h3 text-dark fw-bold">Nehmen Sie Kontakt zu uns auf</h3>
+                    <h3 class="h3 fw-bold">Nehmen Sie Kontakt zu uns auf</h3>
                     <p class="fs-14">
                         <strong>Render Vision</strong><br>
                         Rödernstrasse 8<br>
@@ -697,7 +697,7 @@
                     </p>
                     <p class="fs-14 mb-5"><a href="#" class="text-decoration-none text-primary">Architekturvisualisierung</a></p>
 
-                    <h3 class="h3 text-dark fw-bold">We are social</h3>
+                    <h3 class="h3 fw-bold">We are social</h3>
                     <ul class="d-flex social-icons list-unstyled">
                         <li class="social-linkedin"><a href="https://www.linkedin.com/"><i class="bi bi-linkedin"></i></a></li>
                         <li class="social-behance"><a href="https://www.behance.net/"><i class="bi bi-behance"></i></a></li>
@@ -858,9 +858,102 @@
 
 
 
+    <div class="modal fade" id="cookieModal" tabindex="-1" aria-labelledby="cookieModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header p-4 pb-0 position-relative border-0">
+              <div class="d-flex align-items-center justify-content-center w-100 gap-2 border-bottom pb-3">
+                <div class="modal-logo">
+                    <img class="w-100" src="assets/images/small_logo_white.png" alt="">
+                </div>
+                <h4 class="fs-5 mb-0">Datenschutzeinstellungen</h4>
+              </div>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body p-4">
+                <p class="modal-description mb-0 text-light">
+                    <span class="d-block">Wir benötigen Ihre Zustimmung, bevor Sie unsere Website weiter nutzen können.</span>
+                    <span class="d-block my-1">Wenn du unter 16 Jahren bist und deine Zustimmung zu optionalen Diensten geben möchtest, musst du deine gesetzlichen Vormünder um Erlaubnis bitten.</span> 
+                    <span>Wir verwenden Cookies und andere Technologien auf unserer Website. Einige von ihnen sind essenziell, während andere uns helfen, diese Website und Ihre Erfahrung zu verbessern.</span> 
+                    <span>Personenbezogene Daten können verarbeitet werden (z. B. IP-Adressen), beispielsweise für personalisierte Anzeigen und Inhalte oder für die Messung von Anzeigen und Inhalten.</span>
+                    <span>Sie können weitere Informationen über die Verwendung Ihrer Daten in unserer <a href="#">Datenschutzrichtlinie</a> finden.</span> 
+                    <span>Es besteht keine Verpflichtung, der Verarbeitung Ihrer Daten zuzustimmen, um dieses Angebot zu nutzen.</span> 
+                    <span>Sie können Ihre Auswahl jederzeit widerrufen oder anpassen unter <a href="#" >Einstellungen</a>.</span> 
+                    <span>Bitte beachten Sie, dass je nach individuellen Einstellungen möglicherweise nicht alle Funktionen der Website verfügbar sind.</span>
+                    <span class="py-2 mt-2">Einige Dienste verarbeiten personenbezogene Daten in den USA. Mit Ihrer Zustimmung zur Nutzung dieser Dienste stimmen Sie auch der Verarbeitung Ihrer Daten in den USA gemäß Art. 49 Abs. 1 lit. a DSGVO zu. Der EuGH klassifiziert die USA als Land mit unzureichendem Datenschutz gemäß EU-Standards. Es besteht beispielsweise das Risiko, dass US-Behörden personenbezogene Daten im Rahmen von Überwachungsprogrammen verarbeiten, ohne dass europäische Bürger rechtliche Möglichkeiten zur Geltendmachung haben.</span>
+                </p>
+
+                <ul class="d-flex list-unstyled justify-content-between modal-check-list gap-2">
+                    <li>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="Check1" checked disabled>
+                            <label class="form-check-label" for="Check1">
+                                Essenziell
+                            </label>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="Check2">
+                            <label class="form-check-label" for="Check1">
+                                Statistiken
+                            </label>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="Check3">
+                            <label class="form-check-label" for="Check3">
+                                Marketing
+                            </label>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="Check4">
+                            <label class="form-check-label" for="Check4">
+                                Externe Medien
+                            </label>
+                        </div>
+                    </li>
+                </ul>
+                <div class="d-grid gap-2">
+                    <button class="btn btn-secondary" type="button">Zustimmung speichern</button>
+                    <button class="btn btn-secondary" type="button">Ich akzeptiere alle.</button>
+                    <button class="btn btn-primary" type="button">Nur essentielle Cookies akzeptieren.</button>
+                    <button class="btn btn-secondary" type="button">Individuelle Datenschutzeinstellungen</button>
+                </div>
+            </div>
+            <div class="modal-footer px-4 py-2" style="background-color: #6c757d4d;">
+                <div class="d-flex flex-fill gap-2">
+                    <button class="btn flex-fill btn-outline-secondary hover-primary fs-14 p-0 border-0 bg-transparent" type="button">Präferenzen</button>
+                    <button class="btn flex-fill btn-outline-secondary hover-primary fs-14 p-0 border-0 bg-transparent" type="button">Datenschutzrichtlinie</button>
+                  </div>
+            </div>
+          </div>
+        </div>
+    </div>
 
     <script src="assets/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/nav.js"></script>
     <script src="assets/js/script.js"></script>
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            const hasAcceptedCookies = localStorage.getItem('cookieAccepted');
+
+            if (!hasAcceptedCookies) {
+                const cookieModal = new bootstrap.Modal(document.getElementById('cookieModal'), {
+                backdrop: 'static', // Prevent closing by clicking outside
+                keyboard: false    // Prevent closing by pressing "Esc"
+                });
+                cookieModal.show();
+
+                document.getElementById('acceptCookies').addEventListener('click', function() {
+                localStorage.setItem('cookieAccepted', true); // Save preference
+                cookieModal.hide(); // Close modal
+                });
+            }
+        });
+    </script>
 </body>
 </html>
