--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-bs-theme="dark">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -110,7 +110,7 @@
                             <li class="breadcrumb-item"><a href="#" class="text-decoration-none fs-14"><p class="hover-primary d-inline mb-0">3D-Visualisierung</p></a></li>
                             <li class="breadcrumb-item"><a href="#" class="text-decoration-none fs-14"><p class="hover-primary d-inline mb-0">Architekturvisualisierung</p></a></li>
                         </ol>
-                        <h1 class="project-title fw-bold text-dark mb-4 d-none d-lg-block">Aussenvisualisierung einer Strasse in Berlin</h1>
+                        <h1 class="project-title fw-bold text-light mb-4 d-none d-lg-block">Aussenvisualisierung einer Strasse in Berlin</h1>
                         <div class="project-desc pb-3">
                             <p class="fs-14 mb-2">Diese fotorealistische <a href="#" class="text-primary text-decoration-none">Außenvisualisierung</a> zeigt eine Straße in Berlin – ein atmosphärisches Meisterwerk, das seinesgleichen sucht und das urbane Umfeld einer Großstadt von seiner besten Seite zeigt. Eine <a href="#" class="text-primary text-decoration-none">High-End 3D-Visualisierung</a> von <a href="#" class="text-primary text-decoration-none">Render Vision</a>, deutlich geprägt durch die klare Architektur, elegante Gestaltung und einen stilvoller Auftritt in absolut atemberaubender Stimmung im Sonnenuntergang.</p>
                         </div>
@@ -124,20 +124,20 @@
                     </div>
                 </div>
                 <div class="col-lg-7 gallery-content">
-                    <h1 class="project-title fw-bold text-dark d-lg-none mb-4">Aussenvisualisierung einer Strasse in Berlin</h1>
+                    <h1 class="project-title fw-bold text-light d-lg-none mb-4">Aussenvisualisierung einer Strasse in Berlin</h1>
                     <ul class="pagination d-flex align-items-center justify-content-end list-unstyled gap-4 mb-1">
                         <li class="page-item">
-                            <a class="text-dark fs-5 fw-bold hover-primary" href="#" aria-label="Previous">
+                            <a class="text-light fs-5 fw-bold hover-primary" href="#" aria-label="Previous">
                                 <i class="bi bi-chevron-left"></i>
                             </a>
                         </li>
                         <li class="page-item">
-                            <a class="text-dark fs-5 fw-bold hover-primary" href="#">
+                            <a class="text-light fs-5 fw-bold hover-primary" href="#">
                                 <i class="bi bi-grid"></i>
                             </a>
                         </li>
                         <!-- <li class="page-item">
-                            <a class="text-dark fs-5 fw-bold hover-primary" href="#" aria-label="Next">
+                            <a class="text-light fs-5 fw-bold hover-primary" href="#" aria-label="Next">
                                 <i class="bi bi-chevron-right"></i>
                             </a>
                         </li> -->
@@ -158,7 +158,7 @@
                     </a>
                 </div>
                 <div class="col-2 d-flex justify-content-center align-items-center">
-                    <a class="text-dark fs-5 fw-bold hover-primary" href="#">
+                    <a class="text-light fs-5 fw-bold hover-primary" href="#">
                         <i class="bi bi-grid"></i>
                     </a>
                 </div>
