--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-bs-theme="dark">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -105,7 +105,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6">
-                    <h3 class="h3 text-dark fw-bold">Kontakt</h3>
+                    <h3 class="h3 fw-bold">Kontakt</h3>
                     <p class="fs-14">
                         <strong>Render Vision</strong><br>
                         Rödernstrasse 8<br>
@@ -123,7 +123,7 @@
                     </p>
                     <p class="fs-14 mb-5"><a href="#" class="text-decoration-none text-primary">Architekturvisualisierung</a></p>
 
-                    <h3 class="h3 text-dark fw-bold">We are social</h3>
+                    <h3 class="h3 fw-bold">We are social</h3>
                     <ul class="d-flex social-icons list-unstyled">
                         <li class="social-linkedin"><a href="https://www.linkedin.com/"><i class="bi bi-linkedin"></i></a></li>
                         <li class="social-behance"><a href="https://www.behance.net/"><i class="bi bi-behance"></i></a></li>
